--- a/pom.xml
+++ b/pom.xml
@@ -14,14 +14,8 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <name>Maven Quick Start Archetype</name>  
   <url>http://maven.apache.org</url>  
   
-  <dependencies>  
-    <dependency>  
-      <groupId>junit</groupId>  
-      <artifactId>junit</artifactId>  
-      <version>4.8.2</version>  
-      <scope>test</scope>  
-    </dependency>  
-  </dependencies>  
+  <dependencies/>  
+     
   
 </project>  
 
