--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,16 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <artifactId>my-application1</artifactId>  
   <version>1.0</version>  
   <packaging>jar</packaging>  
+   
   
-  <name>Maven Quick Start Archetype</name>  
-  <url>http://maven.apache.org</url>  
-  
-  <dependencies/>  
-     
+  <dependencies>  
+    <dependency>  
+      <groupId>junit</groupId>  
+      <artifactId>junit</artifactId>  
+      <version>4.8.2</version>  
+      <scope>test</scope>  
+    </dependency>  
+  </dependencies>  
   
 </project>  
 
